--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
               if (d.head) d.head.appendChild(s);
             })(document, window, "_AIHECONG");
             _AIHECONG("ini",{ channelId : "GvaH51" });
+			function showChat() {
+				_AIHECONG('showChat')
+			}
           </script>
 		<div id="wrap" class="wrap">
 			<section>
 				<div class="middle_show">
-					<img src="img/clean_1.jpg"  alt=""/>
-					<img src="img/price_2.gif"  alt="price"/>
-					<img src="img/clean_2.jpg"  alt=""/>
-					<img src="img/clean_3.jpg"  alt=""/>
+					<img src="img/clean_1.webp"  alt=""/>
+					<img src="img/price_2.gif" onclick="showChat()"  alt="price"/>
+					<img src="img/clean_2.webp"  alt=""/>
+					<img src="img/clean_3.webp"  alt=""/>
 				</div>
 			</section>
 		</div>
